--- a/py4java/src/index.css
+++ b/py4java/src/index.css
@@ -1,13 +1,47 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: "Cal Sans";
+  src: url("../public/fonts/cal.ttf");
+  }
+  
+@font-face {
+  font-family: "Inter var";
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: "Regular";
+  src: url("../public/fonts/Inter-roman.var.woff2") format("woff2");
+  }
+
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
+  height: max-content;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  min-height: 100%;
+  height: max-content;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(
+    to top,
+    #646464 0%,
+    #646464 25%,
+    #999999 75%,
+    #999999 100%
+  );
+}
+
+#root {
+  height:auto;
+}
+
+details summary::-webkit-details-marker {
+  display:none;
 }
